# lost-in-docs

./: .env.sample  .gitignore  README.md  demoppt.pptx  pyproject.toml
app/: main.py
app/api/: routes.py
app/config/: gemini_config.py  pinecone_config.py
app/core/: generate.py  parser.py  retrieve.py
app/database/: config.py  crud.py  models.py
static/css/: style.css
templates/: index.html
