[project]
name = "lost-in-docs"
version = "0.1.0"
description = "A FastAPI project - lost-in-docs"
readme = "README.md"
authors = [
    { name = "Heshinth P", email = "heshinth@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.116.1",
    "google-genai>=1.32.0",
    "httpx<1.0.0,>=0.28.1",
    "load-dotenv<1.0.0,>=0.1.0",
]
